# Abhis-AI-Playbook

./: .env.example  .gitignore  README.md  maestro-automation-script-generator.ipynb  mobile-automation-scripts-generator.ipynb
crewai-content-creator/crewai_content_creator/: README.md  pyproject.toml
crewai-content-creator/crewai_content_creator/src/crewai_content_creator/: crew.py  main.py
crewai-content-creator/crewai_content_creator/src/crewai_content_creator/tools/: custom_tool.py
crewai-mobile-tester/: crewai-implementation.py
db/: 001_init.sql
newsletter-agent/: README.md  requirements.txt  system-prompt.txt
newsletter-agent/config/: default_config.yaml  run_config.yaml
newsletter-agent/docs/: architecture.md  operations.md  orchestration.md
newsletter-agent/src/newsletter_agent/: __init__.py  cli.py  config.py  schemas.py
newsletter-agent/src/newsletter_agent/discovery/: __init__.py  blogs.py  youtube.py
newsletter-agent/src/newsletter_agent/notifiers/: __init__.py  email.py  slack.py
newsletter-agent/src/newsletter_agent/pipeline/: __init__.py  assembly.py  (+4 more)
newsletter-agent/workflows/: n8n-newsletter-workflow.json
prompts/: intent_classifier.md  pdf_extractor.md  tone_copy_snippets.md
sheets/: checklists.csv  faqs.csv  playbooks.csv  templates.csv
workflows/: DOM_Completion_And_Handoff.json  DOM_Doc_Intake_And_Validation.json  DOM_Doc_Request.json  DOM_Escalation.json  DOM_New_Client_Intake.json  DOM_QA_Auto_Reply.json  DOM_Reminder_Cadence.json  DOM_Scheduling_Orchestrator.json  EDGE_Inbound_Router.json  OPS_Error_Inbox.json
(+7 files in other folders)
