[project]
name = "crewai_content_creator"
version = "0.1.0"
description = "crewai-content-creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0"
]

[project.scripts]
crewai_content_creator = "crewai_content_creator.main:run"
run_crew = "crewai_content_creator.main:run"
train = "crewai_content_creator.main:train"
replay = "crewai_content_creator.main:replay"
test = "crewai_content_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
